--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,9 +13,12 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.14.0",
+    "pdfkit": "^0.17.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
