--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"./server.js",
-    "dev":"nodemon ./server.js"
-
+    "start": "./server.js",
+    "dev": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cookie-parse": "^0.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
