--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.0",
     "sequelize": "^6.37.7"
   },
