--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "description": "",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@tanstack/react-query": "^5.75.5",
     "axios": "^1.8.4",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "easy-peasy": "^6.1.0",
+    "react-hot-toast": "^2.5.2"
   }
 }
