--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "^2.0.0",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.0",
