--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "react-bootstrap": "^2.10.9"
   }
 }
