Modulo de instructrse tranajo en fichas que a lahora de entrar redirija a fichas y escoja una si tiene fichas relacionadas

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 EMAIL_USER=lmejiamartinez25@gmail.com
-EMAIL_PASS=twitadqbozrvjtnu
-
+EMAIL_PASS=tliteklwtskhxtjad
+#lite klwt skhx tjad
 PORT=3001
 DB_HOST=localhost
 DB_USER=root
