--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "axios": "^1.8.4",
     "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
+    "nodemailer": "^7.0.3",
     "react-bootstrap": "^2.10.9"
   }
 }
